--- a/bower.json
+++ b/bower.json
@@ -1,58 +1,39 @@
 {
-	"name": "brunch-on-spitfire",
-	"repo": "jwl/brunch-on-spitfire",
-	"version": "0.0.1",
-	"main": "_public/js/app.js",
-	"ignore": [
-		"**/.*",
-		"node_modules",
-		"components"
-	],
-	"dependencies": {
-		"jquery": ">= 2.0 < 3.0",
-		"underscore": "*",
-		"bootstrap": ">= 3.2 < 3.3",
-		"angular": ">= 1.2 < 1.3",
-		"angular-sanitize": ">= 1.2 < 1.3",
-		"angular-resource": ">= 1.2 < 1.3",
-		"angular-route": ">= 1.2 < 1.3",
-		"angular-animate": ">= 1.2 < 1.3",
-		"angular-cookies": ">= 1.2 < 1.3",
-		"angular-mocks": ">= 1.2 < 1.3",
-		"angular-bootstrap": "angular-bootstrap-jbruni#~0.11.0",
-		"angular-ui-utils": ">= 0.1.1 < 0.1.2",
-		"angular-recursion": ">= 1.0 < 1.1",
-		"angular-underscore": "*",
-		"angular-postman": ">= 1.0.0 < 1.1.0",
-		"angular-moment": ">= 0.7.0 < 0.8.0",
-		"moment-duration-format": ">= 1.2 < 1.3",
-		"angular-bootstrap-datetimepicker": ">= 0.2 < 0.3",
-		"angular-spinner": ">= 0.5 < 0.6"
-	},
-	"overrides": {
-		"moment-duration-format": {
-			"dependencies": {
-				"underscore": "*"
-			}
-		},
-		"moment": {
-			"main": [
-				"./moment.js",
-				"./lang/pl.js"
-			]
-		},
-		"angular-postman": {
-			"main": [
-				"./js/postman.js"
-			]
-		},
-		"bootstrap": {
-			"main": [
-				"./dist/js/bootstrap.js"
-			]
-		},
-		"angular-mocks": {
-			"main": "README.md"
-		}
-	}
+  "name": "brunch-on-spitfire",
+  "repo": "jwl/brunch-on-spitfire",
+  "version": "0.0.1",
+  "main": "_public/js/app.js",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "components"
+  ],
+  "dependencies": {
+    "lodash": ">= 3.6 < 4.0",
+    "angular": ">= 1.4 < 1.5",
+    "angular-module-tree": ">= 1.0",
+    "angular-sanitize": ">= 1.4 < 1.5",
+    "angular-resource": ">= 1.4 < 1.5",
+    "angular-route": ">= 1.4 < 1.5",
+    "angular-animate": ">= 1.4 < 1.5",
+    "angular-messages": ">= 1.4 < 1.5",
+    "angular-cookies": ">= 1.4 < 1.5",
+    "angular-mocks": ">= 1.4 < 1.5",
+    "angular-lodash": "https://github.com/TouK/angular-lodash.git#master",
+    "bootstrap": ">= 3.3 < 3.4",
+    "angular-ui-router": ">= 0.2"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "./dist/js/bootstrap.js"
+      ]
+    },
+    "angular-mocks": {
+      "main": "README.md"
+    }
+  },
+  "resolutions": {
+    "angular": ">= 1.4 < 1.5"
+  }
 }
