--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "url": ""
   },
   "scripts": {
-    "clean": "coffee clean.coffee",
-    "postinstall": "bower prune && bower install",
-    "prebuild": "npm install",
+    "bower": "bower prune && bower install",
+    "postinstall": "npm run bower",
+    "prebuild": "npm install --unsafe-perm",
     "build": "brunch build --production",
     "prestart": "npm install",
     "start": "brunch watch --server",
@@ -24,34 +24,36 @@
     "protractor": "protractor test/protractor.conf.coffee"
   },
   "dependencies": {
-    "jade": ">= 1.6 < 1.7",
-    "coffee-script": ">= 1.7 < 1.8",
-    "brunch": ">= 1.0 < 2.0",
-    "javascript-brunch": ">= 1.0 < 2.0",
-    "coffee-script-brunch": ">= 1.0 < 2.0",
-    "css-brunch": ">= 1.0 < 2.0",
-    "less-brunch": ">= 1.0 < 2.0",
-    "stylus-brunch": ">= 1.0 < 2.0",
+    "assetsmanager-brunch": ">= 1.8 < 1.9",
     "auto-reload-brunch": ">= 1.0 < 2.0",
-    "uglify-js-brunch": ">= 1.0 < 2.0",
+    "bower": ">= 1.4 < 1.5",
+    "brunch": ">= 1.0 < 2.0",
     "clean-css-brunch": ">= 1.0 < 2.0",
-    "bower": ">= 1.0 < 1.4",
+    "coffee-script": ">= 1.9 < 2.0",
+    "coffee-script-brunch": ">= 1.8 < 2.0",
+    "constangular-brunch": "^0.1.4",
+    "css-brunch": ">= 1.0 < 2.0",
     "git-rev": ">= 0.2 < 0.3",
+    "jade": ">= 1.9 < 2.0",
     "jade-ngtemplates-brunch": ">= 1.7.0 < 1.8.0",
-    "jade-pages-brunch": ">= 1.7.0 < 1.8.0"
-  },
-  "devDependencies": {
-    "npm": ">= 1.4.0 < 1.5.0",
-    "protractor": ">= 1.0 < 1.1",
+    "jade-pages-brunch": ">= 1.7.0 < 1.8.0",
+    "javascript-brunch": ">= 1.0 < 2.0",
+    "jstransformer-coffee-script": "0.0.2",
     "karma": ">= 0.12.0 < 0.13.0",
+    "karma-chrome-launcher": "~0.1.4",
     "karma-cli": "0.0.4",
+    "karma-coffee-preprocessor": ">= 0.2.0",
+    "karma-coverage": "~0.2.6",
+    "karma-html-reporter": "~0.2.3",
     "karma-jasmine": ">= 0.2.0 < 0.3.0",
     "karma-junit-reporter": "~0.2.2",
-    "karma-html-reporter": "~0.2.3",
-    "karma-coverage": "~0.2.6",
-    "karma-chrome-launcher": "~0.1.4",
+    "karma-ng-classify-preprocessor": "^1.0.0",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma-coffee-preprocessor": ">= 0.2.0",
-    "shelljs": "~0.3.0"
+    "less-brunch": ">= 1.0 < 2.0",
+    "npm": ">= 2.7 < 2.8",
+    "process-env-brunch": "^1.4.4-d",
+    "protractor": ">= 1.0 < 1.1",
+    "stylus-brunch": ">= 1.0 < 2.0",
+    "uglify-js-brunch": ">= 1.0 < 2.0"
   }
 }
