--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "prestart": "npm install",
     "start": "brunch watch --server",
     "pretest": "npm install",
-    "test": "karma start test/karma.conf.coffee",
-    "test-single-run": "karma start test/karma.conf.coffee --single-run",
+    "test": "karma start test/karma.conf.js",
+    "test-single-run": "karma start test/karma.conf.js --single-run",
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor test/protractor.conf.coffee"
+    "protractor": "protractor test/protractor.conf.js"
   },
   "dependencies": {
     "assetsmanager-brunch": ">= 1.8 < 1.9",
@@ -29,8 +29,6 @@
     "bower": ">= 1.4 < 1.5",
     "brunch": ">= 1.0 < 2.0",
     "clean-css-brunch": ">= 1.0 < 2.0",
-    "coffee-script": ">= 1.9 < 2.0",
-    "coffee-script-brunch": ">= 1.8 < 2.0",
     "constangular-brunch": "^0.1.4",
     "css-brunch": ">= 1.0 < 2.0",
     "git-rev": ">= 0.2 < 0.3",
@@ -38,11 +36,9 @@
     "jade-ngtemplates-brunch": ">= 1.7.0 < 1.8.0",
     "jade-pages-brunch": ">= 1.7.0 < 1.8.0",
     "javascript-brunch": ">= 1.0 < 2.0",
-    "jstransformer-coffee-script": "0.0.2",
     "karma": ">= 0.12.0 < 0.13.0",
     "karma-chrome-launcher": "~0.1.4",
     "karma-cli": "0.0.4",
-    "karma-coffee-preprocessor": ">= 0.2.0",
     "karma-coverage": "~0.2.6",
     "karma-html-reporter": "~0.2.3",
     "karma-jasmine": ">= 0.2.0 < 0.3.0",
@@ -54,6 +50,7 @@
     "process-env-brunch": "^1.4.4-d",
     "protractor": ">= 1.0 < 1.1",
     "stylus-brunch": ">= 1.0 < 2.0",
+    "typescript-brunch": "^0.8.1",
     "uglify-js-brunch": ">= 1.0 < 2.0"
   }
 }
