--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "auto-reload-brunch": ">= 1.0 < 2.0",
     "bower": ">= 1.4 < 1.5",
     "brunch": ">= 1.0 < 2.0",
+    "brunch-typescript": "^1.5.9",
     "clean-css-brunch": ">= 1.0 < 2.0",
     "constangular-brunch": "^0.1.4",
     "css-brunch": ">= 1.0 < 2.0",
@@ -50,7 +51,7 @@
     "process-env-brunch": "^1.4.4-d",
     "protractor": ">= 1.0 < 1.1",
     "stylus-brunch": ">= 1.0 < 2.0",
-    "typescript-brunch": "^0.8.1",
+    "tsd": "^0.6.4",
     "uglify-js-brunch": ">= 1.0 < 2.0"
   }
 }
