--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "auto-reload-brunch": ">= 1.0 < 2.0",
     "bower": ">= 1.4 < 1.5",
     "brunch": ">= 1.0 < 2.0",
-    "brunch-typescript": "https://github.com/JulianWielga/brunch-typescript",
     "clean-css-brunch": ">= 1.0 < 2.0",
     "constangular-brunch": "^0.1.4",
     "css-brunch": ">= 1.0 < 2.0",
@@ -52,6 +51,7 @@
     "protractor": ">= 1.0 < 1.1",
     "stylus-brunch": ">= 1.0 < 2.0",
     "tsd": "^0.6.4",
+    "typescript-tsd-brunch": "^1.0.0",
     "uglify-js-brunch": ">= 1.0 < 2.0"
   }
 }
